--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
     "bignumber.js": "^9.1.1",
+    "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "graphql-request": "^5.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.18"
   }
 }
